Edit html files
- Edit html files for dynamic response, template tags

--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -1,5 +1,7 @@
 {% extends 'base_blog.html' %}
 {% load static %}
+{% load blog_tags %}
+
 
 {% block content %}
 <!--start wrapper-->
@@ -47,9 +49,15 @@
                 </figure>
                 <div class="post_meta">
                   <h2> {{ post.title }} </h2>
-                  <div class="metaInfo"> <span>By <a href="#" class="admin">{{ post.author.get_full_name }}</a> </span> <span><a
-                        href="#">Webdesign, Media, Logo</a> </span> <span><a href="#" class="admin">5</a>
+                  <div class="metaInfo"> <span>By <a href="#" class="admin">{{ post.author.get_full_name }}</a> </span> <span><a href="#" class="admin">5</a>
                       Comments</span> <span><a href="#" class="admin">{{ post.counted_views }}</a> views</span></div>
+                      <div>
+                        <span>
+                          {% for cat in post.category.all %}
+                          <a href=""><em>{{ cat.name }}</em></a>{% if not forloop.last %},{% endif %}
+                          {% endfor %}
+                       </span><br><br>
+                     </div>
                   <p> {{ post.content }} </p>
                 </div>
               </div>
@@ -149,63 +157,7 @@
         </div>
 
         <!--Sidebar Widget-->
-        <aside class="col-sm-4 col-md-4 col-lg-4 sidebar">
-          <div class="sidebar_widget">
-            <div class="sw_search">
-              <div class="sw_title">
-                <h4>Search</h4>
-              </div>
-              <div class="site-search-area">
-                <form method="get" id="site-searchform" action="#">
-                  <div>
-                    <input class="input-text" name="s" id="s" placeholder="Type Keywords.." type="text" />
-                    <input id="searchsubmit" value="Search" type="submit" />
-                  </div>
-                </form>
-              </div>
-              <!-- end site search -->
-            </div>
-            <div class="sw_categories">
-              <div class="sw_title">
-                <h4>Categories</h4>
-              </div>
-              <ul class="arrows_list">
-                <li><a href="#">Grapic Design (10)</a></li>
-                <li><a href="#">Web Design & Development (25)</a></li>
-                <li><a href="#">Photography (29)</a></li>
-                <li><a href="#">Custom Illustrations (19)</a></li>
-                <li><a href="#">Wordpress Themes(38)</a></li>
-                <li><a href="#">Videography (33)</a></li>
-              </ul>
-            </div>
-            <div class="sw_archives">
-              <div class="sw_title">
-                <h4>Recent Posts</h4>
-              </div>
-              <ul class="archives_list">
-                <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                    incididuntur.</a></li>
-                <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                    incididuntur.</a></li>
-                <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                    incididuntur.</a></li>
-              </ul>
-            </div>
-            <div class="sw_archives">
-              <div class="sw_title">
-                <h4>Latest Twitter</h4>
-              </div>
-              <ul class="archives_list">
-                <li>Make sure you are following <a href="#"><u>@EnvatoMarket</u></a> for all your ThemeForest needs!
-                </li>
-                <li>Make sure you are following <a href="#"><u>@EnvatoMarket</u></a> for all your ThemeForest needs!
-                </li>
-                <li>Make sure you are following <a href="#"><u>@EnvatoMarket</u></a> for all your ThemeForest needs!
-                </li>
-              </ul>
-            </div>
-          </div>
-        </aside>
+        {% include 'blog/blog-sidebar.html' %}
       </div>
       <!--/.row-->
     </div>
