Split the blog home and single sidebar
- sidebar split to different inclusion tags

--- a/templates/base_blog.html
+++ b/templates/base_blog.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav" id="navigation">
-                        <li class="menuItem" id="home"><a href="./#wrapper">Home</a></li>
+                        <li class="menuItem" id="home"><a href="{% url 'website:index_view' %}">Home</a></li>
                         <li class="menuItem"><a href="./#features">features</a></li>
                         <li class="menuItem"><a href="./#courses">courses</a></li>
                         <li class="menuItem"><a href="./#teachers">teachers</a></li>
