--- a/templates/blog/blog-medium-image.html
+++ b/templates/blog/blog-medium-image.html
@@ -29,13 +29,13 @@
           <div class="blog_large">
             {% for post in posts %}
             <article class="post">
-              <div class="post_date"> <span class="day">{{ post.published_date|date:"d"}}<a href="#" class="month">{{ post.published_date|date:"M" }}</a></span> <span class="icon"><i
-                    class="fa fa-file-image-o"></i> </span> </div>
+              <div class="post_date"> <span class="day">{{ post.published_date|date:'M'}}<a href="#" class="month">{{post.published_date|date:'d' }}</a></span> <span class="icon"><i class="fa fa-file-image-o"></i>
+                </span> </div>
               <div class="post_content medium">
                 <figure class="post_img">
 
                   <!-- Post Image Slider -->
-                  
+
                   <div id="slider" class="swipe">
                     <ul class="swipe-wrap">
                       <li><img src="{{ post.image.url }}" alt="blog post"></li>
@@ -50,30 +50,40 @@
                 </figure>
                 <div class="post_meta">
                   <h2> <a href="{% url 'blog:blog_single' pid=post.id %}">{{ post.title }}</a> </h2>
-                  <div class="metaInfo"> <span>By <a href="#" class="admin"> {{post.author.get_full_name}} </a> </span> <span><a href="#" class="admin">5</a> 
+                  <div class="metaInfo"> <span>By <a href="#" class="admin"> {{post.author.get_full_name}} </a> </span>
+                    <span><a href="#" class="admin">5</a>
                       Comments</span> <span><a href="#" class="admin"> {{post.counted_views}} </a> views</span></div>
-                      <div>
-                        <span>
-                          {% for cat in post.category.all %}
-                          <a href=""><em>{{ cat.name }}</em></a>{% if not forloop.last %},{% endif %}
-                          {% endfor %}
-                       </span><br><br>
-                     </div>
+                  <div>
+                    <span>
+                      {% for cat in post.category.all %}
+                      <a href=""><em>{{ cat.name }}</em></a>{% if not forloop.last %},{% endif %}
+                      {% endfor %}
+                    </span><br><br>
+                  </div>
 
-                  <p>{{ post.content|truncatechars:50  }}</p>
-                  <a href="{% url 'blog:blog_single' pid=post.id %}" class="btn btn-small btn-default readmore">Read More</a>
-                </div>
+                  <p>{{ post.content|truncatechars:50 }}</p>
+                  <a href="{% url 'blog:blog_single' pid=post.id %}" class="btn btn-small btn-default readmore">Read
+                    More</a>
+                </div><br><br>
               </div>
               {% endfor %}
-           
-            <!-- Post Youtube Video End-->
+
+            </article> <!-- Post Youtube Video End-->
           </div>
         </div>
-
+        <aside class="col-sm-4 col-md-4 col-lg-4 sidebar">
+          <div class="sidebar_widget">
         <!--Sidebar Widget-->
-        {% include 'blog/blog-sidebar.html' %}
+        {% include 'blog/blog-search.html' %}
+
+        {% postcategories %}
+
+        {% latest_posts %}
+          </div>
+        </aside>
 
         
+
       </div>
       <!--/.row-->
       <div class="col-lg-12 col-md-12 col-sm-12">
@@ -94,4 +104,4 @@
 </section>
 <!--end wrapper-->
 
-{% endblock %} 
+{% endblock %}
