- Add author view, category view
- Add urls for category
- Add urls for author
- Add urls for search
- Add kwargs to view func to handle incoming request
- Add blog search function in view
- Edit html files for dynamic url referrral

--- a/templates/blog/blog-categories.html
+++ b/templates/blog/blog-categories.html
@@ -4,7 +4,7 @@
     </div>
     <ul class="arrows_list">
         {% for name, count in categories.items %}
-        <li><a href="#">{{ name }} - {{count}} </a></li>
+        <li><a href="{% url 'blog:blog_category' cat_name=name %}">{{ name }} - {{count}} </a></li>
         {% endfor %}
     </ul>
 </div>
