--- a/templates/blog/blog-search.html
+++ b/templates/blog/blog-search.html
@@ -3,7 +3,7 @@
         <h4>Search</h4>
     </div>
     <div class="site-search-area">
-        <form method="get" id="site-searchform" action="#">
+        <form method="get" id="site-searchform" action="{% url 'blog:blog_search' %}">
             <div>
                 <input class="input-text" name="s" id="s" placeholder="Type Keywords.." type="text" />
                 <input id="searchsubmit" value="Search" type="submit" />
