Add django frameworks
- Add humanize module
- Add sitemap module
- Add robots module
- Add messages html for pop-up messages
- Fixed previous warnings

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,8 @@
 
 <body onLoad="load()" onUnload="GUnload()">
 
+    {% include 'messages.html' %}
+
     <!--wrapper start-->
     <div class="wrapper" id="wrapper">
         <!-- Preloader -->
