--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -35,6 +35,8 @@
             <div class="form-row clearfix">
               <textarea name="message" id="comments" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 normal medium" placeholder="Your Comments"></textarea>
             </div>
+            {{form.captcha}}
+            <br><br>
             <input type="submit" id="submit" name="send" class="button" value="Send message">
             <!-- <div id="simple-msg"></div> -->
           </form>
